--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 body{
+  scroll-behavior: smooth;
   background-color: black;
   font-family: 'Lato','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
